package Sprint0.View;

public class GeographicArea {
}
