@startuml
title US633 Class Diagram - Web Controller Version

skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor Snow
skinparam FontName quicksand
skinparam titleFontSize 10
skinparam roundcorner 10


skinparam class {
 BorderColor indianred
 BackgroundColor indianred
 BackgroundColor Snow
  roundcorner 10
  ArrowFontName Verdana
  ArrowColor indianred
  ArrowFontColor darkslategrey
  FontSize 12
}



HTTPClient -- HouseMonitoringControllerWeb : >
HouseMonitoringControllerWeb -- GeographicAreaHouseService : >
GeographicAreaHouseService -- GeographicAreaRepository : >
GeographicAreaRepository -- GeographicAreaCrudRepo : >
GeographicAreaRepository -- GeographicArea : >
GeographicAreaCrudRepo -right- GeographicArea : >
GeographicAreaHouseService -- HouseRepository : >
HouseRepository -- HouseCrudRepo : >
HouseRepository -- House : >
HouseCrudRepo -right- House : >
GeographicArea "1" -- "0.*" AreaSensor : may have >
House"1.*" -right- "1" Localization : in in >
AreaSensor"1.*" -right- "1" Localization : is in >
AreaSensor "1" -left- "0.*" Reading : may have >
AreaSensor -- SensorUtils : >
AreaSensor"0.*" -- "1"SensorType : has a >
Reading -left- ReadingUtils : >
SensorUtils -left- ReadingUtils : >

class HouseMonitoringControllerWeb {
GeographicAreaHouseService;
getHighestTemperatureAmplitude(DateIntervalDTO)
}

class GeographicAreaHouseService{
GeographicAreaRepository;
HouseRepository;
getClosestAreaSensorOfGivenType(String, House, GeographicArea)
getMinDistanceToSensorOfGivenType(List<AreaSensor, House)
getAreaSensorsByDistanceToHouse(List<AreaSensor>, House, double)
getAreaSensorsDistanceToHouse(List<AreaSensor>, double)
calculateDistanceToSensor(AreaSensor, House)
validateIntervalDTO(DateIntervalDTO)
}

class House{
motherAreaID;
Localization;
getMotherAreaID()
getLocalization()
}

class GeographicArea{
Long ID;
List<AreaSensor>;
getID()
getSensors()
}

class SensorUtils{
getSensorsOfGivenType(List<AreaSensor>, String)
getMostRecentlyUsedSensor(List<AreaSensor>)
getAreaSensorsWithReadings(List<AreaSensor>)
}

class AreaSensor{
String SensorType;
Localization;
List<Reading>;
getSensorType()
getReadings()
getLocalization()
getDateHighestAmplitudeBetweenDates(Date, Date)
getDaysWithReadingsWithReadingsBetweenDates(Date, Date)
getAmplitudeValueFromDate(Date)
getReadingListBetweenDates(Date,Date)
}

class SensorType{
type;
getType()
}

class Localization{
double latitude;
double longitude;
getLinearDistanceBetweenLocalsInKm(Location)
}

class ReadingUtils{
getFirstSecondOfDay(Date)
getLastSecondOfDay(Date)
getReadingDate()
isReadingDateBetweenTwoDates(Date, Date)
getValuesOfSpecificDayReadings(Date)
compareMonthDayAndYearBetweenDates(Date,Date)
getReadingValue(List<Reading>,int)
}

class Reading{
Date date;
double value;
getDate()
getValue()
}

class GeographicAreaRepository{
GeographicAreaCrudRepo;
getByID()
}

Interface GeographicAreaCrudRepo{
findByID()
}

class HouseRepository{
HouseCrudRepo;
getAll()
}

Interface HouseCrudRepo{
findAll()
}




@enduml